# cti-misp-opencti-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: observables.csv  observables.txt
src/cti_misp_opencti_lab/: __init__.py  cli.py  input.py  misp.py  models.py  normalize.py  report.py  stix.py
tests/: test_exports.py  test_normalize.py
