[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cti-misp-opencti-lab"
version = "0.1.0"
description = "A small CTI exchange lab that converts observables into MISP event JSON and STIX 2.1 bundles for OpenCTI-style workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Antonio Baldi" }
]
keywords = ["cti", "misp", "opencti", "stix", "threat-intelligence", "osint", "cybersecurity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cti-lab = "cti_misp_opencti_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

